# Rina-s-Realm

./: README.md  datataker.py
aiwaifu/: aipart.py  anilistpart.py  animeani.py  apicode.py  main.py  rec.py  requirements.txt
aiwaifu parts/: aipart.py  apicode.py  main.py  requirements.txt
for linux/: README.md  pyproject.toml
for linux/waifu/: anilistpart.py  apicode.py  main.py
waifu/: apicode.py  imagetotext.py  main.py  pyproject.toml  requirements.txt  test.py
